# basic-raytracer

./: .gitignore  CMakeLists.txt  build.sh  camera.h  config.h  hit.h  light.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  obj_loader.cpp  obj_loader.h  ray.h  scene.cpp  scene.h  sphere.h  vec.h
